# psmux

./: .gitignore  Cargo.toml  README.md  pmux.json  psmux.json
.github/workflows/: release.yml
scoop/: psmux.json
scripts/: install.ps1
src/: app.rs  cli.rs  client.rs  commands.rs  config.rs  copy_mode.rs  format.rs  input.rs  layout.rs  main.rs  pane.rs  platform.rs  rendering.rs  server.rs  session.rs  tree.rs  types.rs  util.rs  window_ops.rs
tests/: battle_test.ps1  test_bind_key.ps1  test_tmux_compat.ps1
