[package]
name = "pmux"
version = "0.1.0"
edition = "2021"
description = "A PowerShell-focused terminal multiplexer inspired by tmux, written in Rust"
license = "MIT"
repository = "https://github.com/marlocarlo/pmux"
readme = "README.md"
keywords = ["terminal", "multiplexer", "tmux", "tui", "cli", "powershell", "windows"]
categories = ["command-line-utilities"]

# Windows only
[target.'cfg(not(windows))'.dependencies]

[[bin]]
name = "pmux"
path = "src/main.rs"

[[bin]]
name = "tmux"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.28"
portable-pty = "0.2"
which = "6"
chrono = "0.4"
vt100 = "0.16"
unicode-width = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1